[workspace]
resolver = "2"

members = [
    "crates/erooster",
    "crates/eroosterctl",
    "crates/erooster_core",
    "crates/erooster_imap",
    "crates/erooster_smtp",
    "crates/erooster_web",
]

[profile.dev.package.backtrace]
opt-level = 3

# Does not work yet
#[patch.crates-io]
#prometheus = {version = "0.13.1", features = ["process"]}
