# SPDX-FileCopyrightText: 2023 MTRNord
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
resolver = "2"

members = [
    "crates/erooster",
    "crates/eroosterctl",
    "crates/erooster_core",
    "crates/erooster_imap",
    "crates/erooster_smtp",
    "crates/erooster_web",
]

[workspace.package]
rust-version = "1.95"

[workspace.dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["http2"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.11.1"
cfg-if = "1.0.0"
clap = { version = "4.6.1", features = ["derive", "color", "suggestions", "env"] }
clearscreen = "2.0.1"
color-eyre = "0.6.2"
const_format = "0.2.36"
futures = { version = "0.3.32", features = ["thread-pool"] }
hickory-resolver = { version = "0.26.1", features = ["tokio"] }
indicatif = "0.18.4"
mail-auth = { version = "0.9.0", features = ["ring"] }
maildir = { version = "0.6.4", features = ["mmap"] }
mailparse = "0.14.1"
mime = "0.3.17"
nom = "7.1.3"
notify = "8.2.0"
opentelemetry = { version = "0.32.0", features = ["metrics"] }
opentelemetry-otlp = { version = "0.32.0", features = ["grpc-tonic"] }
owo-colors = "4.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "hickory-dns", "http2"] }
rpassword = "7.2.0"
rustls = "0.23.40"
rustls-pemfile = "2.2.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.27"
serde_json = "1.0.150"
sha2 = "0.10"
simdutf8 = "0.1.5"
sys-info = "0.9.1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-rustls = { version = "0.26.4", features = ["tls12"] }
tokio-stream = { version = "0.1.18", features = ["net", "io-util"] }
tokio-util = { version = "0.7.18", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-error = "0.2.0"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
webpki-roots = "1.0.7"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
pedantic = { level = "warn", priority = -1 }
branches_sharing_code = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
dbg_macro = "warn"
fallible_impl_from = "warn"
filetype_is_file = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
imprecise_flops = "warn"
lossy_float_literal = "warn"
missing_const_for_fn = "warn"
mutex_integer = "warn"
panic_in_result_fn = "warn"
path_buf_push_overwrite = "warn"
redundant_pub_crate = "warn"
suboptimal_flops = "warn"
todo = "warn"

[profile.dev.package.backtrace]
opt-level = 3
