[package]
name = "erooster"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
name = "erooster"
path = "src/main.rs"

[dependencies]
erooster_core = { version = "0.1.0", path = "../erooster_core" }
erooster_smtp = { version = "0.1.0", path = "../erooster_smtp" }
erooster_imap = { version = "0.1.0", path = "../erooster_imap" }
erooster_web = { version = "0.1.0", path = "../erooster_web" }
erooster_deps = { version = "0.1.0", path = "../erooster_deps" }

[features]
default = []
jaeger = ["erooster_deps/jaeger"]

[build-dependencies]
clap = { version = "4.1.6", features = [
    "derive",
    "color",
    "suggestions",
    "env",
] }
clap_mangen = "0.2.13"
vergen = { version = "8.2.4", features = ["git", "gitoxide"] }
