[package]
name = "erooster_core"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]
include = ["src/**/*", "build.rs", "migrations/**/*"]

[lib]
bench = false

[dependencies]
erooster_deps = { version = "0.1.0", path = "../erooster_deps" }
# Cannot be reexported
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitoxide"] }

[features]
default = ["maildir"]
maildir = ["erooster_deps/maildir"]
jaeger = ["erooster_deps/jaeger"]

#[profile.release]
#debug = true

[dev-dependencies]
convert_case = "0.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
enum-iterator = "1.3.0"
enum-display-derive = "0.1.1"
