# SPDX-FileCopyrightText: 2023 MTRNord
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "erooster_core"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]
include = ["src/**/*", "build.rs", "migrations/**/*"]

[lib]
bench = false

[dependencies]
tracing = { workspace = true }
# Cannot be reexported
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring", "uuid"] }
rusqlite = { version = "0.32.0", optional = true }
argon2 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
maildir = { workspace = true, optional = true }
mailparse = { workspace = true }
owo-colors = { workspace = true }
rand_core = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
simdutf8 = { workspace = true }
sys-info = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
vergen-gix = "10.0.0"

[features]
default = ["maildir"]
maildir = ["dep:maildir"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite", "dep:rusqlite"]
test-helpers = ["sqlite"]

#[profile.release]
#debug = true

[dev-dependencies]
convert_case = "0.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
enum-iterator = "1.3.0"
enum-display-derive = "0.1.1"

[lints]
workspace = true
