# SPDX-FileCopyrightText: 2023 MTRNord
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "erooster_deps"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.2", features = ["std"] }
async-trait = "0.1.74"
base64 = "0.21.5"
bytes = "1.5.0"
cfg-if = "1.0.0"
color-eyre = "0.6.2"
futures = { version = "0.3.29", features = ["thread-pool"] }
mailparse = "0.14.0"
nom = "7.1.3"
opentelemetry-jaeger = { version = "0.19.0", features = [
    "rt-tokio",
    "tokio",
], optional = true }
owo-colors = "3.5.0"
rand_core = { version = "0.6.4", features = ["std"] }
rustls = "0.21.8"
serde = { version = "1.0.190", features = ["derive"] }
serde_yaml = "0.9.27"
simdutf8 = { version = "0.1.4" }
sys-info = "0.9.1"
tokio = { version = "1.33.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["net", "io-util"] }
tokio-util = { version = "0.7.10", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.1"
secrecy = "0.8.0"
once_cell = "1.18.0"
clap = { version = "4.4.7", features = [
    "derive",
    "color",
    "suggestions",
    "env",
] }
opentelemetry = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
tracing-opentelemetry = { version = "0.24.0", optional = true }
const_format = "0.2.32"
notify = "6.1.1"
rustls-pemfile = "1.0.3"
tokio-rustls = { version = "0.24.1", features = ["tls12"] }
trust-dns-resolver = "0.23.2"
webpki-roots = "0.25.2"
mail-auth = { version = "0.3.6", features = ["rust-crypto"] }
reqwest = { version = "0.11.22", default-features = false, features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }
serde_json = "1.0.108"
yaque = "0.6.5"
uuid = { version = "1.5.0", features = ["v4", "serde"] }
axum = { version = "0.6.20", features = ["http2"] }
axum-opentelemetry-middleware = { git = "https://gitlab.com/famedly/company/backend/libraries/axum-opentelemetry-middleware.git" }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
mime = "0.3.17"
tower-http = { version = "0.4.4", features = ["trace"] }
clearscreen = "2.0.1"
indicatif = "0.17.7"
rpassword = "7.2.0"


[dependencies.maildir]
version = "0.6.3"
git = "https://github.com/erooster-mail/maildir.git"
#rev = "179625c3cc15212fb26eca5b819f7fe0d6f802e1"
branch = "MTRNord/clippy"
optional = true

[features]
default = ["maildir"]
maildir = ["dep:maildir", "maildir/mmap"]
jaeger = ["dep:opentelemetry-jaeger", "dep:tracing-opentelemetry"]
