[package]
name = "erooster_imap"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
async-trait = "0.1.61"
base64 = "0.20.0"
color-eyre = "0.6.2"
const_format = "0.2.30"
erooster_core = { version = "0.1.0", path = "../erooster_core" }
futures = { version = "0.3.25", features = ["thread-pool"] }
nom = "7.1.2"
notify = "5.0.0"
rustls = "0.20.7"
rustls-pemfile = "1.0.1"
simdutf8 = { version = "0.1.4" }
tokio = { version = "1.24.1", features = ["full"] }
tokio-rustls = { version = "0.23.4", features = ["tls12"] }
tokio-stream = { version = "0.1.11", features = ["net", "io-util"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tracing = "0.1.37"
secrecy = "0.8.0"

[dev-dependencies]
convert_case = "0.6.0"
enum-iterator = "1.2.0"
enum-display-derive = "0.1.1"
