[package]
name = "erooster_imap"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
erooster_core = { version = "0.1.0", path = "../erooster_core" }
erooster_deps = { version = "0.1.0", path = "../erooster_deps" }
time = { version = "0.3.30", features = ["parsing", "macros"] }

[dev-dependencies]
convert_case = "0.6.0"
enum-iterator = "1.3.0"
enum-display-derive = "0.1.1"
