[package]
name = "erooster_smtp"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

include = ["src/**/*"]

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
color-eyre = "0.6.2"
erooster_core = { version = "0.1.0", path = "../erooster_core" }
futures = { version = "0.3.25", features = ["thread-pool"] }
nom = "7.1.3"
rustls = "0.21.5"
rustls-pemfile = "1.0.1"
serde = { version = "1.0.152", features = ["derive"] }
simdutf8 = { version = "0.1.4" }
mailparse = "0.14.0"
sqlxmq = { version = "0.4", default-features = false, features = [
    "runtime-tokio-rustls",
], git = "https://github.com/erooster-mail/sqlxmq.git" }
tokio = { version = "1.24.2", features = ["full"] }
tokio-rustls = { version = "0.24.1", features = ["tls12"] }
tokio-stream = { version = "0.1.12", features = ["net", "io-util"] }
tokio-util = { version = "0.7.4", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
trust-dns-resolver = "0.22.0"
webpki-roots = "0.25.0"
secrecy = "0.8.0"
mail-auth = { version = "0.3.0", features = ["rust-crypto"] }
time = { version = "0.3.20", features = ["formatting"] }
reqwest = { version = "0.11.13", default-features = false, features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }
serde_json = "1.0.91"

[[bench]]
name = "smtp_bench"
harness = false

[dev-dependencies]
convert_case = "0.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
enum-iterator = "1.3.0"
enum-display-derive = "0.1.1"
