[package]
name = "erooster_smtp"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

include = ["src/**/*"]

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erooster_deps = { version = "0.1.0", path = "../erooster_deps" }
time = { version = "0.3.30", features = ["formatting", "parsing", "macros"] }


erooster_core = { version = "0.1.0", path = "../erooster_core" }
[features]
default = []
benchmarking = []

[[bench]]
name = "smtp_bench"
harness = false
required-features = ["benchmarking"]

[dev-dependencies]
convert_case = "0.6.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
enum-iterator = "1.3.0"
enum-display-derive = "0.1.1"
