# SPDX-FileCopyrightText: 2023 MTRNord
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "erooster_smtp"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

include = ["src/**/*"]

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
time = { version = "0.3.30", features = ["formatting", "parsing", "macros"] }
erooster_core = { version = "0.1.0", path = "../erooster_core" }
base64 = { workspace = true }
cfg-if = { workspace = true }
color-eyre = { workspace = true }
futures = { workspace = true }
hickory-resolver = { workspace = true }
mail-auth = { workspace = true }
nom = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
simdutf8 = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
webpki-roots = { workspace = true }

[features]
default = []
benchmarking = []
postgres = ["erooster_core/postgres"]
sqlite = ["erooster_core/sqlite"]

[[bench]]
name = "smtp_bench"
harness = false
required-features = ["benchmarking"]

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "tls-rustls-ring"] }
enum-iterator = "2.3.0"
enum-display-derive = "0.1.1"

[lints]
workspace = true
