[package]
name = "erooster_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.11"
axum ={ version = "0.5", features = ["http2"]}
axum-opentelemetry-middleware = { git="https://gitlab.com/famedly/company/backend/libraries/axum-opentelemetry-middleware.git" }
axum-server = { version = "0.4", features = ["tls-rustls"] }
color-eyre = "0.6"
erooster_core = {version = "0.1.0", path="../erooster_core"}
mime = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"
