[package]
name = "erooster_web"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

include = ["src/**/*", "templates/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
bench = false

[dependencies]
askama = "0.12.0"
axum = { version = "0.6.20", features = ["http2"] }
axum-opentelemetry-middleware = { git = "https://gitlab.com/famedly/company/backend/libraries/axum-opentelemetry-middleware.git" }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
color-eyre = "0.6.2"
erooster_core = { version = "0.1.0", path = "../erooster_core" }
mime = "0.3.16"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
