[package]
name = "eroosterctl"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
name = "eroosterctl"
path = "src/main.rs"

[dependencies]
erooster_core = { version = "0.1.0", path = "../erooster_core" }
clearscreen = "2.0.0"
clap = { version = "4.1.6", features = [
    "derive",
    "color",
    "suggestions",
    "env",
] }
color-eyre = "0.6.2"
indicatif = "0.17.3"
owo-colors = "3.5.0"
rpassword = "7.2.0"
sys-info = "0.9.1"
tokio = { version = "1.31.0", features = ["full"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
secrecy = "0.8.0"

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitoxide"] }
