# SPDX-FileCopyrightText: 2023 MTRNord
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "eroosterctl"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
name = "eroosterctl"
path = "src/main.rs"

[dependencies]
erooster_core = { version = "0.1.0", path = "../erooster_core" }
erooster_deps = { version = "0.1.0", path = "../erooster_deps" }

[build-dependencies]
vergen = { version = "8.2.4", features = ["git", "gitoxide"] }

[features]
default = ["postgres"]
postgres = ["erooster_core/postgres"]
sqlite = ["erooster_core/sqlite"]
