# SPDX-FileCopyrightText: 2023 MTRNord
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "eroosterctl"
version = "0.1.0"
edition = "2021"
description = "An IMAP4v2 compatible mail server"
license = "Apache-2.0"
authors = ["MTRNord <mtrnord@nordgedanken.dev>"]
repository = "https://github.com/MTRNord/erooster/"
keywords = ["email", "imap", "smtp", "simple", "fast"]
categories = ["email", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
name = "eroosterctl"
path = "src/main.rs"

[dependencies]
erooster_core = { version = "0.1.0", path = "../erooster_core" }
clap = { workspace = true }
clearscreen = { workspace = true }
color-eyre = { workspace = true }
comfy-table = "7.2.2"
dialoguer = "0.12.0"
hickory-resolver = { workspace = true }
indicatif = { workspace = true }
mail-auth = { workspace = true }
owo-colors = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
rpassword = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = "0.3"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
x509-parser = "0.18.1"

[build-dependencies]
vergen-gix = "10.0.0"

[features]
default = ["postgres"]
postgres = ["erooster_core/postgres"]
sqlite = ["erooster_core/sqlite"]

[lints]
workspace = true
